marklogic-data-hub-central/ui/src/components/entities/mapping/mapping-step-detail/mapping-step-detail.module.scss
@font-face {
	font-family: 'MLCustomFont';
	src: url('../../../../fonts/icomoon.ttf') format('truetype');
}

.mapContainer{
    height: auto;
    width: 95.6vw;
}

.header{
    display:inline-flex;
}

.headerTitle{
    font-size: 1.5em;
    width: fit-content;
}

.saveMessage{
    border: 1px solid #ff0000;
    margin-left: 60em;
}
.noMessage{
    padding: 16.5px 0vh;
}
.parentContainer{
    display: flex;
    flex-direction: row;
    padding-bottom: 1vh;
    padding-right: 40px;
}

.sourceContainer{
    width: auto;
    height: auto;
    flex: 4;
    display: flex;
    flex-direction: column;
    padding-right: 10px;
    padding-left: 10px;
    word-break: break-all;
    height: calc(100vh - 315px);
    overflow-y: auto;
}

.sourceTable{
      & thead > tr > th {
        background-color: #EEEEEE;
        line-height: 2px;
      };
      & tbody > tr > td {
        background-color: #FAFAFA;
        line-height: 2px;
    }
}

.sourceTableRows{
    line-height: 1px;
}

.sourceName{
    white-space: nowrap;
}

.tableExpandIcon {
    padding-right: 5px;
    margin-left: -15px;
}

.filteredXMLHeader {
    margin-left: -2px;
}

.sourceTitle{
    font-size: 16px;
    margin-top: 8px;
    margin-bottom: -10px;
    white-space: nowrap;
}

.filterContainer {
    padding: 8px;
}
.searchInput {
    min-width: 8vw;
    margin-bottom: 8px;
    display: block
}
.resetButton {
    width: 90px;
    margin-right: 8px;
}

.searchSubmitButton {
    width: 90px
}

.highlightStyle {
    background-color: #ffc069;
    padding: 0px
}

.entityContainer{
    width: 100%;
    flex: 9;
    display: flex;
    flex-direction: column;
    padding-left: 10px;
    padding-right: 10px;
    word-break: break-all;
    height: calc(100vh - 315px);
    overflow-y: auto;
    > .entityDetails{
        display: inline-block;
        vertical-align: middle;
        margin-bottom: 3px;
        > .entityTypeTitle{
            float: left;
            margin-top: -10px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    > .columnOptionsSelectorContainer {
        display: inline-block;
        min-width: 1000px;
        margin-bottom: 10px;

        > .columnOptionsSelector{
            float: right;
            margin: 15px 15px 0px 0px;
        }

        > .entityCollapseButtons{
            float: right;
            margin-top: 10px;
            padding-right: 15px;
        }
    }
}

.sourceButtons{
  display: flex;
  float: right;
  margin-top: -25px;
}

.navigationButtons{
  width: 100%;
}

.navigationButtonsError{
  width: 100%;
  margin-right: 50px;
}

.sourceCollapseButtons{
width: 100%;
padding-top: 23px;
padding-bottom: 9px;
}

> .expandCollapseBtn {
    width: 102px;
    height: 32px;
}

.DropdownMenuItem {
    display: flex;
    vertical-align: middle;
    max-height: 3vh;
}

.columnSelectorOverlay{
    border: 1px solid rgba(0, 0, 0, 0.2);
    box-sizing: border-box;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.dropdownHover{
    &:hover{
        color: var(--hoverColor);
    }
}

.checkBoxItem{
    line-height: 2vh;
    margin-top: 4px;
}

hr {
    display: block;
    margin-top: 2em;
    margin-bottom: -0.5em;
    margin-left: -1.5em;
    margin-right: -1.5em;
}

.btn_test {
    &:disabled {
        &:hover {
            background-color: #f5f5f5;
            border-color: #d9d9d9;
        }
    }
}

.mapExpression{
    width: 100%;
    line-height: 1px;
    vertical-align: top;
}

.entityIcon:before{
    content: "\e93b";
    font-family: MLCustomFont;
    color: #394494;
    font-size: 24px;
    position: relative;
    font-weight: 200;
    top: 4px;
    padding-right: 3px;
    display: inline-block;
}

.entityTypeText {
    font-size: 16px;
}

.interceptorSuccessAlert {
    background-color: #EFF0F7;
    border: 1px solid #5B69AF;
    width: 100%;
    z-index: 999;
    padding-right: 1px;
    padding-left: 35px;
    word-break: break-word;
    min-height: 60px;
    margin-bottom: -32px;
    margin-top: -26px;
    position: relative;
  }

.failedInterceptorContainer {
    margin-top: 140px
}

.interceptorFailureAlert {
    margin-top: -30px;
    background-color: #FFCDCD;
    border: 1px solid #FF2727;
    width: 100%;
    padding-right: 20px;
    padding-left: 35px;
    padding-top: 8px;
    word-break: break-word;
}

.interceptorFailureIcon {
    color: #c20018 !important;
    font-size: 16px !important;
    left: 11px !important;
}

.interceptorSuccessIcon {
    color: #5B69AF !important;
    font-size: 16px !important;
    left: 11px !important;
}

.emptyCard {
    background-color: #fff7e6;
    border: 1px solid #ffc53dd6;
    flex-wrap: wrap;
    padding-right: 1px;
    padding-left: 1px;
}
.emptyText {
    word-break: keep-all;
}
.testButtons{
    align-items: flex-end;
    float: right;
}
.entityDetails{
    align-items: flex-start;
    float: left;
}
.sourceDetails{
    position: relative;
    margin-top: -19px;
    margin-bottom: -21px;
}
.sourceDataIcon:before {
  content: "\e934";
  font-family: MLCustomFont;
  color: #394494;
  font-size: 24px;
  position: relative;
  font-weight: 200;
  top: 4px;
  padding-right: 3px;
  display: inline-block;
}
.srcDetails {
    z-index: 999;
    font-size: 14px;
    padding-left: 25px;
    margin-bottom: -50px;
}

.sourceValue{
    margin-top: -6px;
    margin-bottom: -20px;
    white-space: pre;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: normal;
}

.namespace{
    color: #5B69AF;
    cursor: pointer;
}

.toolTipForValues{
    cursor: pointer;
}

.questionCircle {
    font-size: 12px;
    color: #7F86B5;
}

.expandIcon{
    margin-left: -16px;
    vertical-align:middle;
    text-align: left;
    font-size: 13px;
    padding-right: 1px;
}

.inputURIContainer{
    padding-top: 10px;
    margin-left: -4px;
    vertical-align: middle;
    text-align: left;
    width: 105%;
}

.uriEditing{
    width: 265px !important;
    margin-left: 5px;
    margin-right: 2px;
}

.sourceQuery{
    padding-top: 4px;
}
.uri{
    padding: 4px 0px;
    height : 32px;
}

.showingEditContainer{
  position: absolute;
}
.showingEditIcon{
    padding-top: 5px;
    padding-right: 5px;
    padding-bottom: 3px;
    padding-left: 3px;
    border: 1px solid #E9F7FE;
    color: #394494;
}
.notShowingEditContainer{
    padding-top: 10px;
    padding-right: 2.3em;
    padding-left: 3px;
    margin-left: -3px;
}

.URItext{
    margin-left: 4px;
    color: #394494;
}

.uriHoverContainer {
    display: flex;
    flex-direction: row;
}

.editIcon{
    display: relative;
    justify-content: flex-end;
    font-Size: 24px;
    color: #394494;
    background-color: #b9daed;
    padding: 5px 3px 5px 3px;
    margin-left: 5px;
    margin-right: -6px;
    margin-top: -4px;
    cursor: pointer;
}

.checkIcon {
    background-color: #7F86B5;
    border-radius: 5px;
    color: #ffffff;
    cursor: pointer;
    font-size: 16px;
}

.closeIcon{
    background-color: #7F86B5;
    color: #ffffff;
    border-radius: 3px;
    padding: 2px 2px;
    cursor: pointer;
}

.docLinksUl{
    padding-left: 1vw;
}

.spinRunning {
    position: absolute;
    padding-top: 100px;
    text-align: center;
    width: 100%;
    height: 100%;
    z-index: 999;
    background-color: rgba(255, 255, 255, 0.6);
    .runningLabel {
        margin-top: 5px;
        color: #3b458f;
    }
}

  #browse-buttons{
    border: 1px solid rgba(0, 0, 0, 0.961);
  }

  .stepSettingsLink {
    position: absolute;
    bottom: 93%;
    right: 30px;
    color: #44499C;
    cursor: pointer;
    .stepSettingsLabel {
        display: inline-block;
        margin-left: 6px;
    }
    &:hover{
        color: var(--hoverColor);
    }
}


.clearTestIcons{
  right: 1.2%;
  bottom: 87%;
  padding-right: 10px;
  position: absolute;
}

.legendContainer {
  margin-bottom: -80px;
  padding-top: 20px;
  padding-right: 55px;
  left: 63%;
  position: relative;
}

